# fcl

./: .gitignore  .project  .travis.yml  LICENSE  MANIFEST.in  Makefile  README.md  main.c  pyproject.toml  setup.py
.github/workflows/: ci.yml
algorithms/kmeans/: elkan_commons.c  elkan_commons.h  elkan_kmeans.c  elkan_kmeans.h  init_params.c  init_params.h  kmeans.c  kmeans.h  kmeans_cluster_hashmap.c  kmeans_cluster_hashmap.h  kmeans_control.c  kmeans_control.h  kmeans_utils.c  kmeans_utils.h  kmeanspp.c  kmeanspp.h  minibatch_commons.c  minibatch_commons.h  minibatch_kmeans.c  minibatch_kmeans.h  nc_kmeans.c  nc_kmeans.h  pca_elkan_kmeans.c  pca_elkan_kmeans.h  pca_kmeans.c  pca_kmeans.h  pca_minibatch_kmeans.c  pca_minibatch_kmeans.h  pca_yinyang.c  pca_yinyang.h  yinyang.c  yinyang.h
cli/: cli_tasks.c  cli_tasks.h  kmeans_task.c  kmeans_task.h  kmeans_task_commons.c  kmeans_task_commons.h  kmeanspp_task.c  kmeanspp_task.h  main.c  task_commons.c  task_commons.h
doc/: doxy.config
examples/datasets/: .gitignore  get_datasets.sh
examples/matlab/: check_compile.m  get_dataset.m
matlab/: .gitignore
matlab/kmeans/: fcl_kmeans.c  fcl_kmeans.m  fcl_kmeans_commons.c  fcl_kmeans_commons.h  fcl_kmeans_fit.c  fcl_kmeans_fit.m  fcl_kmeans_predict.c  fcl_kmeans_predict.m  fcl_make_kmeans.m  mx_fcl_kmeans_fit.c  mx_fcl_kmeans_fit.h
python/: .gitignore  requirements.txt  requirements_examples.txt  setup.py
python/fcl/: .gitignore  __init__.py  exceptions.py
python/utils/: create_pca_vectors_from_dataset.py
utils/: argtable3.c  cdict.c  cdict.h  clogging.c  fcl_file.c  fcl_file.h  fcl_logging.c  fcl_logging.h  fcl_random.c  fcl_random.h  fcl_string.c  fcl_string.h  fcl_time.c  fcl_time.h  global_defs.h  jsmn.c  jsmn.h  types.h  utarray.h  utstring.h
(+71 files in other folders)
